--- a/dkms.conf
+++ b/dkms.conf
@@ -1,7 +1,7 @@
-PACKAGE_NAME="startsuxl"
+PACKAGE_NAME="stratusxl"
 PACKAGE_VERSION="0.1"
 MAKE[0]="make KVERSION=$kernelver"
 CLEAN="make clean"
 DEST_MODULE_LOCATION[0]="/extra"
-BUILT_MODULE_NAME[0]="startsuxl"
+BUILT_MODULE_NAME[0]="stratusxl"
 AUTOINSTALL="yes"
